# dotfiles-tool

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
dotman/: __init__.py  __main__.py  cli.py  config.py  encryption.py  git_sync.py  profiles.py  tracker.py
tests/: test_cli.py
