[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles-tool"
version = "0.1.0"
description = "Dotfile manager — track, sync, and restore config files across machines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shazeus", email = "efeborazan07@gmail.com" }]
keywords = [
    "dotfiles", "configuration", "symlinks", "git", "cli",
    "dotfile-manager", "dev-tools", "terminal", "profiles"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
dotman = "dotman.cli:cli"

[project.urls]
Homepage = "https://github.com/shazeus/dotfiles-tool"
Repository = "https://github.com/shazeus/dotfiles-tool"
"Bug Tracker" = "https://github.com/shazeus/dotfiles-tool/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotman*"]
