[metadata]
name = dotfiles-tool
version = 0.1.1
author = shazeus
author_email = efeborazan07@gmail.com
description = Dotfile manager — track, sync, and restore config files across machines
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/shazeus/dotfiles-tool
project_urls =
    Repository = https://github.com/shazeus/dotfiles-tool
    Bug Tracker = https://github.com/shazeus/dotfiles-tool/issues
keywords = dotfiles configuration symlinks git cli dotfile-manager dev-tools terminal profiles
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.0
    rich>=13.0
    gitpython>=3.1
    cryptography>=41.0

[options.entry_points]
console_scripts =
    dotman = dotman.cli:cli

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    ruff
